welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	} else if (a+b=a+c+10 || a+b=b+c+10) {
                    ^